--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Cheems through the World</string>
 
+    <string name="visit">Add Visit</string>
+
     <string name="place">Place:</string>
     <string name="reason">Reason:</string>
     <string name="responsible">Responsible:</string>
